--- a/src/App.css
+++ b/src/App.css
@@ -37,10 +37,13 @@
   }
 }
 /* --------------- */
-
+body {
+  background-color: black;
+}
 .title {
   text-align: center;
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  color: white;
 }
 .title1 {
   font-size: 40px;
@@ -49,10 +52,21 @@
   font-size: 20px;
   margin-top: -25px;
 }
-img {
+.image1 {
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 100%;
   height: 350px;
+}
+.listElements {
+  margin: 15px;
+}
+p {
+  color: white;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+}
+.listImages {
+  width: 300px;
+  height: 300px;
 }
