--- a/src/App.css
+++ b/src/App.css
@@ -59,14 +59,30 @@ body {
   width: 100%;
   height: 350px;
 }
+/* --- */
+h2 {
+  font-size: 40px;
+  color: white;
+  text-align: center;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  border: 5px solid rgb(168, 24, 168);
+}
 .listElements {
-  margin: 15px;
+  display: flex;
 }
 p {
+  font-size: 20px;
+  margin-top: 160px;
+  margin-left: 10%;
   color: white;
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+}
+.priice {
+  margin-left: 5px;
 }
 .listImages {
   width: 300px;
   height: 300px;
+  border: 5px solid rgb(168, 24, 168);
+  margin: 20px;
 }
